<resources>
    <string name="app_name">QSS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_find_station">Find A Station</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_find_station1">FindStation1</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_user_idshow_qr">QR UserID</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_garage">Garage</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_tesing">TesingActivity</string>
    <string name="title_activity_vehicle_status">VehicleStatus</string>
    <string name="title_activity_rewards">Rewards</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_single_vehicle_status">Vehicle Status</string>
    <string name="x">List of Recent Services</string>
    <string name="title_activity_reminders_preferences">Reminders Preferences</string>
    <string name="goToStation">Go!</string>
    <string name="vehiclesTextView">New Text</string>
    <string name="notifyServer">Notify Server</string>
    <string name="emailRegistration">Email</string>
    <string name="nameRegistration">Name</string>
    <string name="submitRegistrationButton">Submit</string>
    <string name="locationRegistration">Location</string>
    <string name="refreshRewardsButton">Refresh</string>
    <string name="pointsTextView">Points</string>
    <string name="descriptionRewardsTV">this is the description of the selected reward from list below</string>
    <string name="logOutConfirm">Yes</string>
    <string name="logOutConfirmMsg">Are you sure you want to logout?</string>
    <string name="usernameLogin">Username</string>
    <string name="passwordLogin">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="reNewPassword">Re-enter new Password</string>
    <string name="changePasswordSubmit">Submit</string>
    <string name="preferenceDialogMsg">you\'d like to be notified every?</string>
    <string name="preferencesDialogButton">OK</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="clearNotificationButton">Clear</string>
    <string name="notifications">Notifications</string>
    <string name="notificationTitle">You have %s messages</string>
    <string name="notificationContent">Tab to check</string>
    <string name="galleryButton">Choose from Gallery</string>
    <string name="cameraButton">Take a new photo</string>
    <string name="xa">Garage</string>
    <string name="days">" days remaining"</string>
    <string name="days_ago">" days ago"</string>
    <string name="notification_frequencies">Notifications Frequencies</string>
    <string name="change_password_tap_title">Changing Password</string>
    <string name="qr_code_tap_title">USER ID QR Code</string>
    <string name="logout_tap_title">Log Out</string>
    <string name="title_activity_gcm_register">GcmRegister</string>
    <string name="title_activity_initialization">Initialization</string>
</resources>
